Fix height of back button and alignment of close icon

--- a/drawer/markup-kit/scss/_drawer.scss
+++ b/drawer/markup-kit/scss/_drawer.scss
@@ -83,7 +83,7 @@
   border:0;
   cursor:pointer;
   background:none;
-  height:44px;
+  height:25px;
   width:44px;
   display:flex;
   align-items: center;
@@ -101,7 +101,7 @@
 
 .panel button.close {
   position: absolute;
-  top: 22px;
+  top: 15px;
   right: 15px;
   border: 0;
   cursor: pointer;
